--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,7 +60,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.2.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\FreeCamera2D.cs" />
+    <Compile Include="Assets\Scripts\CharacterSelect.cs" />
     <Compile Include="Assets\Scripts\Utility\AsepriteJsonImporter.cs" />
+    <Compile Include="Assets\Scripts\ClickToRun.cs" />
     <Compile Include="Assets\MapGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
